--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -16,16 +16,17 @@
       height: 3rem;
       width: unset;
       transform: translateX(0);
-      transition: transform 0.5s cubic-bezier(0.600, -0.280, 0.735, 0.045);
+      transition: transform 0.3s ease-in;
       object-fit: contain;
       object-position: left;
-      margin-right: 2rem;
       /* for the logo animation to not be cropped on the right */
+      margin-right: 2rem;
     }
 
     @media screen and (min-width: $mobile-breakpoint) {
       &.collapsed img {
         transform: translateX(-90%);
+        transition: transform 0.5s cubic-bezier(0.600, -0.280, 0.735, 0.045);
       }
     }
   }
